--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,21 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Manrope', sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fff;
+  /* color: rgba(255, 255, 255, 0.87); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+@font-face {
+  font-family: 'Frau'; /*Can be any text*/
+  src: local('AirbnbCerealLight'),
+    url('./assets/fonts/fraunces/Fraunces-VariableFont_wght.ttf') format('truetype');
 }
 
 a {
@@ -55,15 +59,31 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.actions {
+  display: flex;
+}
+
+.action_block {
+  display: flex;
+  flex-direction: column;
+}
+
+.action_title {
+  color: var(--dark-purple, #24053e);
+  text-align: center;
+  font-family: Fraunces 144pt;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+}
+
+.about {
+  font-family: Manrope;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  color: var(--dark-purple, #24053e);
+  text-align: center;
 }
